clusters/production/linkwarden/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: linkwarden
  labels:
    name: linkwarden
